# Fabric-Spark-Advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  spark_mcp_server.py  test_mcp_architecture.py
.github/: copilot-instructions.md
agent/: JUDGE_README.md  ORCHESTRATOR_README.md  __init__.py  judge.py  mcp_client_wrapper.py  orchestrator.py  prompts.py
deployment/: azure-container-apps-deploy.md  deploy-azure-ps5.ps1  deploy-azure-simple.ps1  deploy-azure.ps1  get_azure_credentials.ps1  in-notebook-server.md  ngrok-tunnel-setup.md  test-deployment.ps1
docs/: AUTHENTICATION_SETUP.md  AZURE_DEPLOY_QUICKSTART.md  DEMO_TECHNICAL_DETAILS.md  DEPLOY.md  DEPLOYMENT.md  DIAGNOSTIC_APP_ID_MISMATCH.md  FABRIC_DEPLOYMENT.md  MCP_ARCHITECTURE.md  OUTPUT_COMPATIBILITY.md  QUERY_GENERATOR_IMPROVEMENTS.md  QUICKSTART.md  TABLE_NAMES_REFERENCE.md  TROUBLESHOOTING.md
examples/: fabric_recommendations_demo.py  judge_demo.py  orchestrator_demo.py
fabric_spark_advisor/: MANIFEST.md  README.md  __init__.py  advisor.py  local_advisor.py  pyproject.toml  requirements.txt  setup.py
fabric_spark_advisor/client/: __init__.py  mcp_client.py
fabric_spark_advisor/examples/: fabric-notebook-deployment-guide.ipynb
fabric_spark_advisor/ui/: __init__.py  formatters.py  gradio_app.py  intent.py
mcp_server/: __init__.py  feedback_learning_strategy.md  kusto_client.py  server.py  sparkagent_feedback_schema.kql
notebooks/: README.md
notebooks/archive/: FabricSparkAdvisor_Interactive.ipynb  FabricSparkAdvisor_QuickStart.ipynb  spark_recommender.ipynb
queries/: GAP_ANALYSIS.kql  diagnostic_queries.kql  fix_missing_recommendations.kql
rag/: indexer.py  retriever.py
rag/docs/: README.md  driver_mode_snapshot.md  lakehouse_table_maintenance.md  metadata.json  resource_profile_configurations.md  spark_best_practices_overview.md
scripts/: check_recs.py  check_schema.py  test_intent_fix.py
tests/: __init__.py  conftest.py  test_app.py  test_judge.py  test_query.py  test_rag.py  test_tools.py
ui/: README.md  __init__.py  app.py
